simplofied methods wip2

--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -27,7 +27,8 @@
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="16dp">
+        android:paddingTop="16dp"
+        android:imeOptions="actionNext">
 
         <requestFocus />
     </EditText>
@@ -42,7 +43,8 @@
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
-        android:paddingTop="16dp" />
+        android:paddingTop="16dp"
+        android:imeOptions="actionDone"/>
 
 
     <Button
