--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -6,7 +6,7 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin"
-    tools:context=".EmailActivity"
+    tools:context=".VoiceEmailActivity"
     android:orientation="vertical"
     android:id="@+id/a1">
 
