--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -21,7 +21,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:drawableRight="@drawable/i1"
+        android:drawableRight="@drawable/mic_icon"
         android:inputType="textEmailAddress"
         android:hint="Email"
         android:paddingBottom="16dp"
@@ -37,7 +37,7 @@
         android:id="@+id/txt_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/i1"
+        android:drawableRight="@drawable/mic_icon"
         android:hint="Password"
         android:inputType="textPassword"
         android:paddingBottom="16dp"
