--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -11,11 +12,18 @@
     android:weightSum="1">
 
 
-<android.support.v7.widget.Toolbar
+
+
+    <android.support.v7.widget.Toolbar
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
       android:id="@+id/tob"></android.support.v7.widget.Toolbar>
 
+    <ImageButton
+        android:id="@+id/imageButton"
+        android:layout_width="153dp"
+        android:layout_height="85dp"
+        app:srcCompat="@drawable/logo" />
     <EditText
         android:id="@+id/txt_usr"
         android:layout_width="match_parent"
