--- a/app/src/main/res/layout/activity_launch_page.xml
+++ b/app/src/main/res/layout/activity_launch_page.xml
@@ -7,16 +7,30 @@
     android:background="#ffffff"
     tools:context=".LaunchPage">
 
+    <TextView
+        android:id="@+id/welcome"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="center_horizontal"
+        android:text="welcome"
+        android:textAllCaps="true"
+        android:textStyle="bold|italic"
+        android:textColor="#EFBA8C"
+        android:textSize="32dp" />
+
     <ImageView
         android:id="@+id/imageView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:src="@drawable/logo" />
-    <FrameLayout android:layout_width="match_parent"
+
+    <FrameLayout
+        android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:fitsSystemWindows="true">
 
-        <LinearLayout android:id="@+id/fullscreen_content_controls"
+        <LinearLayout
+            android:id="@+id/fullscreen_content_controls"
             style="?metaButtonBarStyle"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
@@ -25,14 +39,14 @@
             android:orientation="horizontal"
             tools:ignore="UselessParent">
 
-            <Button android:id="@+id/dummy_button"
+            <Button
+                android:id="@+id/dummy_button"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:src="@drawable/mic_icon"
                 android:onClick="goToLogin"
+                android:drawableLeft="@drawable/mic_icon"
                 android:text="Login to Send Mail" />
-
         </LinearLayout>
     </FrameLayout>
 
