login fields with voice and icons changed

--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -90,7 +90,8 @@
         android:layout_height="wrap_content"
         android:id="@+id/voice_btn"
         android:layout_marginTop="180dp"
-        android:src="@drawable/mic_icon"/>
+        android:padding="0dp"
+        android:src="@drawable/send_mail"/>
 
     </TableLayout>
 
