--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -1,42 +1,35 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:gravity="center"
+    android:orientation="vertical"
+    android:paddingBottom="16dp"
     android:paddingLeft="16dp"
     android:paddingRight="16dp"
     android:paddingTop="16dp"
-    android:paddingBottom="16dp"
-    android:gravity="center"
     android:weightSum="1">
 
 
-
-
     <android.support.v7.widget.Toolbar
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-      android:id="@+id/tob"></android.support.v7.widget.Toolbar>
+        android:id="@+id/tob"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"></android.support.v7.widget.Toolbar>
 
-    <ImageButton
-        android:id="@+id/imageButton"
-        android:layout_width="153dp"
-        android:layout_height="85dp"
-        app:srcCompat="@drawable/logo" />
     <EditText
         android:id="@+id/txt_usr"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="16dp"
-        android:drawableRight="@drawable/mic_icon"
-        android:inputType="textEmailAddress"
+        android:drawableLeft="@drawable/mail_icon"
+        android:drawablePadding="5dp"
+        android:drawableRight="@drawable/microphone"
+        android:drawableEnd="@drawable/microphone"
+        android:drawableStart="@drawable/mail_icon"
         android:hint="Email"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:imeOptions="actionNext">
+        android:imeOptions="actionNext"
+        android:inputType="textEmailAddress">
 
         <requestFocus />
     </EditText>
@@ -45,14 +38,15 @@
         android:id="@+id/txt_pwd"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:drawableRight="@drawable/mic_icon"
+        android:drawableLeft="@drawable/touch_id"
+        android:drawableStart="@drawable/touch_id"
+        android:drawablePadding="5dp"
+        android:drawableRight="@drawable/microphone"
+        android:drawableEnd="@drawable/microphone"
         android:hint="Password"
+        android:imeOptions="actionDone"
         android:inputType="textPassword"
-        android:paddingBottom="16dp"
-        android:paddingLeft="16dp"
-        android:paddingRight="16dp"
-        android:paddingTop="16dp"
-        android:imeOptions="actionDone"/>
+        android:paddingBottom="16dp"/>
 
 
     <Button
@@ -61,6 +55,9 @@
         android:layout_height="wrap_content"
         android:layout_gravity="center"
         android:layout_marginTop="32dp"
+        android:drawableLeft="@drawable/user"
+        android:drawableStart="@drawable/user"
+        android:drawablePadding="5dp"
         android:paddingBottom="16dp"
         android:paddingLeft="16dp"
         android:paddingRight="16dp"
