--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -15,57 +15,61 @@
         android:layout_height="match_parent"
         android:stretchColumns="1">
 
+    <TableRow>
+        <android.support.design.widget.TextInputLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content">
+
+       <EditText
+            android:id="@+id/txt_to"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:inputType="textEmailAddress|textMultiLine"
+           android:hint="TO"
+           android:ems="12"/>
+        </android.support.design.widget.TextInputLayout>
+    </TableRow>
+
+   <TableRow>
+       <TextView
+            android:id="@+id/lb_cc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Cc/Bcc:"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+
+       <EditText
+           android:id="@+id/txt_cc"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:inputType="textMultiLine"
+           android:ems="10"/>
+   </TableRow>
         <TableRow>
+        <TextView
+            android:id="@+id/lb_sub"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Subject:"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
 
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/txt_to"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:ems="12"
-                    android:hint="TO"
-                    android:inputType="textEmailAddress|textMultiLine"
-                    android:paddingLeft="@dimen/activity_horizontal_margin"
-                    android:paddingRight="@dimen/activity_horizontal_margin" />
-            </android.support.design.widget.TextInputLayout>
-        </TableRow>
-
-        <TableRow>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/txt_cc"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:ems="10"
-                    android:hint="CC"
-                    android:inputType="textMultiLine" />
-            </android.support.design.widget.TextInputLayout>
-        </TableRow>
-
-        <TableRow>
-
-            <android.support.design.widget.TextInputLayout
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content">
-
-                <EditText
-                    android:id="@+id/txt_sub"
-                    android:layout_width="wrap_content"
-                    android:layout_height="match_parent"
-                    android:ems="10"
-                    android:hint="Subject"
-                    android:inputType="textEmailSubject|textMultiLine"
-                    android:paddingLeft="16dp"
-                    android:paddingRight="16dp" />
-            </android.support.design.widget.TextInputLayout>
-        </TableRow>
+        <EditText
+            android:id="@+id/txt_sub"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:paddingLeft="16dp"
+            android:paddingRight="16dp"
+            android:inputType="textEmailSubject|textMultiLine"
+            android:ems="10" />
+    </TableRow>
 
         <android.support.design.widget.TextInputLayout
             android:layout_width="match_parent"
