--- a/app/src/main/res/layout/activity_launch_page.xml
+++ b/app/src/main/res/layout/activity_launch_page.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#ffffff"
-    tools:context=".LaunchPage">
+    tools:context=".WelcomePage">
 
     <TextView
         android:id="@+id/welcome"
