--- a/app/src/main/res/layout/activity_email.xml
+++ b/app/src/main/res/layout/activity_email.xml
@@ -37,7 +37,7 @@
             android:id="@+id/lb_cc"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:text="Cc/Bcc:"
+            android:text="Cc:"
             android:paddingLeft="@dimen/activity_horizontal_margin"
             android:paddingRight="@dimen/activity_horizontal_margin"
             android:paddingTop="@dimen/activity_vertical_margin"
@@ -45,6 +45,24 @@
 
        <EditText
            android:id="@+id/txt_cc"
+           android:layout_width="wrap_content"
+           android:layout_height="wrap_content"
+           android:inputType="textMultiLine"
+           android:ems="10"/>
+   </TableRow>
+        <TableRow>
+       <TextView
+            android:id="@+id/lb_bcc"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Bcc:"
+            android:paddingLeft="@dimen/activity_horizontal_margin"
+            android:paddingRight="@dimen/activity_horizontal_margin"
+            android:paddingTop="@dimen/activity_vertical_margin"
+            android:paddingBottom="@dimen/activity_vertical_margin"/>
+
+       <EditText
+           android:id="@+id/txt_bcc"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="textMultiLine"
