--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,5 +1,7 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
-
+    <color name="colorPrimary">#70CCF9</color>
+    <color name="colorPrimaryDark">#34B8F9</color>
+    <color name="colorAccent">#FF4081</color>
     <color name="black_overlay">#66000000</color>
-
 </resources>
