--- a/app/src/main/res/menu/menu_email.xml
+++ b/app/src/main/res/menu/menu_email.xml
@@ -3,6 +3,6 @@
     xmlns:tools="http://schemas.android.com/tools" tools:context=".EmailActivity">
     <item android:id="@+id/logout"
         android:title="@string/action_logout"
-        android:icon="@drawable/icon_close"
+        android:icon="@drawable/logout"
         android:orderInCategory="100" app:showAsAction="never" />
 </menu>
