--- a/app/src/main/res/menu/menu_email.xml
+++ b/app/src/main/res/menu/menu_email.xml
@@ -1,8 +1,10 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools" tools:context=".EmailActivity">
-    <item android:id="@+id/logout"
-        android:title="@string/action_logout"
+    xmlns:tools="http://schemas.android.com/tools"
+    tools:context=".EmailActivity">
+    <item
+        android:id="@+id/logout"
         android:icon="@drawable/logout"
-        android:orderInCategory="100" app:showAsAction="never" />
+        android:title="@string/action_logout"
+        app:showAsAction="never" />
 </menu>
