login page with voice

--- a/app/src/main/res/layout/activity_launch_page.xml
+++ b/app/src/main/res/layout/activity_launch_page.xml
@@ -40,11 +40,10 @@
             tools:ignore="UselessParent">
 
             <Button
-                android:id="@+id/dummy_button"
+                android:id="@+id/gotoLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
-                android:onClick="goToLogin"
                 android:drawableLeft="@drawable/user"
                 android:drawableStart="@drawable/user"
                 android:drawablePadding="-15dp"
