--- a/app/src/main/res/layout/activity_launch_page.xml
+++ b/app/src/main/res/layout/activity_launch_page.xml
@@ -40,7 +40,7 @@
             tools:ignore="UselessParent">
 
             <Button
-                android:id="@+id/gotoLogin"
+                android:id="@+id/goToLogin"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
